CANDLEPIN-954: Relaxed constraint on null values in ConsumerCloudData
- ConsumerCloudData.addCloudOfferingIds and .setCloudOfferingIds now
  accept null collections and collections with null or empty values,
  but will silently ignore them for the purposes of collecting and
  retaining the offering IDs
- Removed use of Apache Commons StringUtil from the Util class
- Removed ConsumerCloudData.setId, .equals, and .hashCode
- Fixed a bug in the Request object which would pass through null
  values to the underlying regex replace operation